静态文件浏览器缓存问题

--- a/larabbs_one/public/mix-manifest.json
+++ b/larabbs_one/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=c0a0aecb66ca2d1f8393",
+    "/css/app.css": "/css/app.css?id=1aeda010f4b6516e5d85"
 }
