--- a/larabbs_one/composer.json
+++ b/larabbs_one/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
+        "mews/captcha": "~3.0",
         "overtrue/laravel-lang": "~3.0"
     },
     "require-dev": {
@@ -65,5 +66,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://mirrors.cloud.tencent.com/composer/"
+        }
     }
 }
